--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ footer p {
 /* === Header Logo + Title Alignment  === */
 .header-inner {
   display: flex;
-  align-items: center; * keep centered layout like bef/ore */
+  align-items: center;
   gap: 1px; /* spacing between logo + text */
 }
 
@@ -302,7 +302,7 @@ button + button,
    7.a. LAYOUT HELPERS
    ========================================= */
 
-   /* Centers page content and adds horizontal padding.
+/* Centers page content and adds horizontal padding.
    Keeps page from stretching edge to edge.*/
 .container {
   width: 90%;
@@ -310,7 +310,7 @@ button + button,
   margin: 0 auto;
   padding: 1rem;
 }
- /* Instantly hides an element, js uses this.*/
+/* Instantly hides an element, js uses this.*/
 .hidden {
   display: none !important;
 }
@@ -325,7 +325,7 @@ button + button,
 .hero {
   width: 100%;
   height: 500px;
-  background-image: url("/images/hero.jpg");
+  background-image: url("../images/hero.jpg");
   background-size: cover;
   background-position: center;
   border-radius: 0 0 6px 6px;
@@ -496,20 +496,18 @@ button + button,
   display: none;
 }
 
-.packing-supplies{
+.packing-supplies {
   display: none;
 }
 
-.art-supplies{
+.art-supplies {
   display: none;
 }
 
-input[type="checkbox"]{
-  transform:scale(1.5);
-  margin-left:1rem;
+input[type="checkbox"] {
+  transform: scale(1.5);
+  margin-left: 1rem;
 }
-
-
 
 /* ============================
    11. NOTIFY PAGE (Form + Confirmation)
